--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/wgc_db
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path= /swagger-ui.html
+springdoc.api-docs.path= /v3/api-docs
+springdoc.packages-to-scan= com.jjy.wgc.controller
+
