--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ springdoc.swagger-ui.path= /swagger-ui.html
 springdoc.api-docs.path= /v3/api-docs
 springdoc.packages-to-scan= com.jjy.wgc.controller
 
+mybatis-plus.type-handlers-package=com.jjy.wgc.handler
+
