--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ springdoc.packages-to-scan= com.jjy.wgc.controller
 
 mybatis-plus.type-handlers-package=com.jjy.wgc.handler
 
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.database=0
