--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.database=0
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
